# reductool

./: Cargo.toml  README.md
crates/reductool/: Cargo.toml
crates/reductool-proc-macro/: Cargo.toml
crates/reductool-proc-macro/src/: lib.rs
crates/reductool-proc-macro/tests/ui/: method_self.rs  method_self.stderr  method_self_by_value.rs  method_self_by_value.stderr  method_self_mut.rs  method_self_mut.stderr  pattern_struct.rs  pattern_struct.stderr  pattern_tuple.rs  pattern_tuple.stderr  pattern_underscore.rs  pattern_underscore.stderr
crates/reductool/examples/: basic.rs
crates/reductool/src/: lib.rs
